--- a/project_api_nginx.conf
+++ b/project_api_nginx.conf
@@ -2,11 +2,11 @@ server {
     access_log /var/log/nginx/api-backend_access.log;
     error_log  /var/log/nginx/api-backend_error.log;
 
-    server_name backend.com;
+    server_name project.com;
     client_max_body_size 10m;
 
     location /static/ {
-        alias /var/www/backend/static/;
+        alias /var/www/project/static/;
     }
 
     location / {
