--- a/pat-mat_nginx.conf
+++ b/pat-mat_nginx.conf
@@ -1,12 +1,12 @@
 server {
-    access_log /var/log/nginx/api-backend_access.log;
-    error_log  /var/log/nginx/api-backend_error.log;
+    access_log /var/log/nginx/pat-mat_access.log;
+    error_log  /var/log/nginx/pat-mat_error.log;
 
-    server_name project.com;
+    server_name pat-mat.com;
     client_max_body_size 10m;
 
     location /static/ {
-        alias /var/www/project/static/;
+        alias /var/www/pat-mat/static/;
     }
 
     location / {
