--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@ todo
 venv
 static
 backend_db
-project/celerybeat-schedule
-project/celerybeat.pid
-project/static
+pat-mat/celerybeat-schedule
+pat-mat/celerybeat.pid
+pat-mat/static
