--- a/docker-compose-pro.yml
+++ b/docker-compose-pro.yml
@@ -1,6 +1,6 @@
 services:
-  backend_db:
-    container_name: backend_db
+  pat-mat_db:
+    container_name: pat-mat_db
     image: postgres:14.3-alpine
     restart: unless-stopped
     volumes:
@@ -8,12 +8,12 @@ services:
     env_file:
       - .env
 
-  backend_api:
-    container_name: backend_api
+  pat-mat_api:
+    container_name: pat-mat_api
     build: .
     restart: unless-stopped
     depends_on:
-      - backend_db
+      - pat-mat_db
     volumes:
       - .:/app
     ports:
@@ -24,8 +24,8 @@ services:
   # backend_celery:
   #   container_name: backend_celery
   #   build: .
-  #   working_dir: /app/project
-  #   command: ["celery", "-A", "project", "worker", "-l", "info"]
+  #   working_dir: /app/pat-mat
+  #   command: ["celery", "-A", "pat-mat", "worker", "-l", "info"]
   #   restart: unless-stopped
   #   volumes:
   #     - .:/app
@@ -38,8 +38,8 @@ services:
   # backend_beat:
   #   container_name: backend_beat
   #   build: .
-  #   working_dir: /app/project
-  #   command: ["celery", "-A", "project", "beat", "-l", "info"]
+  #   working_dir: /app/pat-mat
+  #   command: ["celery", "-A", "pat-mat", "beat", "-l", "info"]
   #   restart: unless-stopped
   #   volumes:
   #     - .:/app
